cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MissedSemicolonsTestCase/missed_semicolon_after_class.cc
class AClassWithMissedSemicolon {
public:
    int f;
    void fun();
}

class AnotherClass {
};